# brettseton

./: .gitignore  CNAME  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: deploy.yml
src/: commands.rs  lib.rs  terminal_fs.rs
src/apps/: guess.rs  mod.rs  snake.rs  tetris.rs
src/assets/: style.css
src/commands/: builtin.rs  mod.rs  registry.rs
src/commands/builtin/: about.rs  clear.rs  github.rs  guess.rs  help.rs  linkedin.rs  mod.rs  snake.rs  stack.rs  tetris.rs
src/terminal/: app.rs  bootstrap.rs  controls.rs  core.rs  dom.rs  emulator.rs  link.rs  mod.rs  model.rs  render_state.rs  renderer.rs  session.rs  shell_dom.rs  socials.rs
src/terminal-fs/links/: github  linkedin
src/terminal-fs/pages/: about  stack
src/terminal/core/: action_dispatcher.rs  mod.rs  state_machine.rs  states.rs
src/terminal/core/states/: app_state.rs  mod.rs  shell_state.rs
src/terminal/input/: bindings.rs  joystick.rs  keyboard.rs  mod.rs  shell.rs  tick.rs
src/terminal/ui/: diff.rs  markup.rs  mod.rs  presenter.rs  surface.rs
