[package]
name = "brettseton"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Node",
  "DomRect",
  "PointerEvent",
  "Text",
  "Window",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
